Japanese translation of dpkg-divert.8 and dpkg-query.1 and update of the others (822-date.1, cleanup-info.8, dpkg-checkbuilddeps.1, dpkg-name.1, dpkg-scanpackages.1, deb.5, dpkg-statoverride.8, deb-old.5)

--- a/man/po4a/822-date.1/po/ja.po
+++ b/man/po4a/822-date.1/po/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-25 22:19+0900\n"
-"PO-Revision-Date: 2006-08-02 22:25+0900\n"
+"PO-Revision-Date: 2006-08-16 11:11+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
-"Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
+"Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -137,11 +137,3 @@ msgid ""
 "B<822-date> and this manpage were written by Ian Jackson. They are hereby "
 "placed by him into the public domain."
 msgstr "B<822-date> とこのマニュアルページは Ian Jackson によって書かれた。そして、彼の手によって public domain とされている。"
-
-# type: TH
-#~ msgid "822-DATE"
-#~ msgstr "822-DATE"
-
-# type: TH
-#~ msgid "14th August 1996"
-#~ msgstr "14th August 1996"
