--- a/man/po4a/dpkg-divert.8/po/ja.po
+++ b/man/po4a/dpkg-divert.8/po/ja.po
@@ -1,93 +1,88 @@
+# translation of dpkg-divert.8.ja.po to Japanese
 # SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# Copyright (C) 2006 Free Software Foundation, Inc.
+# KISE Hiroshi <kise@fuyuneko.jp>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-08-02 21:53+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
-"Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
+"PO-Revision-Date: 2006-08-16 12:18+0900\n"
+"Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
+"Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=EUC-JP\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-divert.8:1
 #, no-wrap
 msgid "dpkg-divert"
-msgstr ""
+msgstr "dpkg-divert"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-divert.8:1
 #, no-wrap
 msgid "2006-05-23"
-msgstr ""
+msgstr "2006-05-23"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-divert.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian Project"
 msgstr "Debian Project"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-divert.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg utilities"
 msgstr "dpkg utilities"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-divert.8:2
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NAME"
-msgstr "Ì¾Á°"
+msgstr "åå‰"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:4
-#, fuzzy
 msgid "dpkg-divert - override a package's version of a file"
-msgstr "dpkg-divert -- ¥Ñ¥Ã¥±¡¼¥¸¤Î¥Õ¥¡¥¤¥ë¤Î¥ª¡¼¥Ğ¡¼¥é¥¤¥É"
+msgstr "dpkg-divert - ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®ãƒ•ã‚¡ã‚¤ãƒ«ã®ã‚ªãƒ¼ãƒãƒ¼ãƒ©ã‚¤ãƒ‰"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-divert.8:5
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SYNOPSIS"
-msgstr "½ñ¼°"
+msgstr "æ›¸å¼"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:10
-#, fuzzy
 msgid "B<dpkg-divert> [I<options>] [B<--add>] I<E<lt>fileE<gt>>"
-msgstr "B<dpkg-divert> [options] [--add] I<E<lt>fileE<gt>>"
+msgstr "B<dpkg-divert> [I<options>] [B<--add>] I<E<lt>fileE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:15
-#, fuzzy
 msgid "B<dpkg-divert> [I<options>] B<--remove> I<E<lt>fileE<gt>>"
-msgstr "B<dpkg-divert> [options] --remove I<E<lt>fileE<gt>>"
+msgstr "B<dpkg-divert> [I<options>] B<--remove> I<E<lt>fileE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:20
-#, fuzzy
 msgid "B<dpkg-divert> [I<options>] B<--list> I<E<lt>glob-patternE<gt>>"
-msgstr "B<dpkg-divert> [options] --list I<E<lt>glob-patternE<gt>>"
+msgstr "B<dpkg-divert> [I<options>] B<--list> I<E<lt>glob-patternE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:25
-#, fuzzy
 msgid "B<dpkg-divert> [I<options>] B<--truename> I<E<lt>fileE<gt>>"
-msgstr "B<dpkg-divert> [options] --truename I<E<lt>fileE<gt>>"
+msgstr "B<dpkg-divert> [I<options>] B<--truename> I<E<lt>fileE<gt>>"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-divert.8:26
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DESCRIPTION"
-msgstr "ÀâÌÀ"
+msgstr "èª¬æ˜"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:36
-#, fuzzy
 msgid ""
 "File `diversions' are a way of forcing B<dpkg>(1)  not to install a file "
 "into its location, but to a `diverted' location. Diversions can be used "
@@ -97,17 +92,16 @@ msgid ""
 "'conffiles') need to be preserved by dpkg, when installing a newer version "
 "of a package which contains those files."
 msgstr ""
-"`diversions' ¤È¤¤¤¦¥Õ¥¡¥¤¥ë¤Ë¤è¤ê¡¢dpkg ¤Ï¥Õ¥¡¥¤¥ë¤ò¥¤¥ó¥¹¥È¡¼¥ë¤¹¤ë»ş¤Ë ËÜÍè"
-"°Õ¿Ş¤·¤Æ¤¤¤¿¾ì½ê¤Ç¤Ï¤Ê¤¯ÂàÈò¤·¤¿(`diverted')¾ì½ê¤Ë¥¤¥ó¥¹¥È¡¼¥ë¤¹¤ë ¤è¤¦¤Ë¤Ê"
-"¤ë¡£diversions ¤Ï Debian ¥Ñ¥Ã¥±¡¼¥¸¥¹¥¯¥ê¥×¥È¤Ç¾×ÆÍ¤¬¤ª¤³¤ê¤¦¤ë ¥Õ¥¡¥¤¥ë¤ò°Ü"
-"Æ°¤µ¤»¤ë¤¿¤á¤Ë»È¤¦¤³¤È¤¬¤Ç¤­¤ë¡£¥·¥¹¥Æ¥à´ÉÍı¼Ô¤Ï ¥Ñ¥Ã¥±¡¼¥¸¤ÎÀßÄê¥Õ¥¡¥¤¥ë¤äÂ¾"
-"¤Î¥Õ¥¡¥¤¥ë¤ò(`conffiles' ¤È¤·¤Æ¥Ş¡¼¥¯ ¤µ¤ì¤Æ¤¤¤Ê¤±¤ì¤Ğ) dpkg ¤¬¿·¤·¤¤¥Ğ¡¼¥¸¥ç"
-"¥ó¤Î¥Ñ¥Ã¥±¡¼¥¸¤ò¥¤¥ó¥¹¥È¡¼¥ë¤¹¤ë »ş¤Ë¤½¤ì¤é¤Î¥Õ¥¡¥¤¥ë¤ò¾å½ñ¤­¤·¤Æ¤·¤Ş¤ï¤Ê¤¤¤è"
-"¤¦¤Ë¤¹¤ë¤¿¤á¤Ë diversion ¤ò »È¤¦¤³¤È¤¬¤Ç¤­¤ë¡£"
+"`diversions' ã¨ã„ã†ãƒ•ã‚¡ã‚¤ãƒ«ã«ã‚ˆã‚Šã€B<dpkg>(1) ã¯ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã™ã‚‹æ™‚ã«æœ¬æ¥"
+"æ„å›³ã—ã¦ã„ãŸå ´æ‰€ã§ã¯ãªãé€€é¿ã—ãŸ (`diverted') å ´æ‰€ã«ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã™ã‚‹ã‚ˆã†ã«ãª"
+"ã‚‹ã€‚diversions ã¯ Debian ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã‚¹ã‚¯ãƒªãƒ—ãƒˆã§è¡çªãŒãŠã“ã‚Šã†ã‚‹ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ç§»"
+"å‹•ã•ã›ã‚‹ãŸã‚ã«ä½¿ã†ã“ã¨ãŒã§ãã‚‹ã€‚ã‚·ã‚¹ãƒ†ãƒ ç®¡ç†è€…ã¯ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®è¨­å®šãƒ•ã‚¡ã‚¤ãƒ«ã‚„ä»–"
+"ã®ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ (`conffiles' ã¨ã—ã¦ãƒãƒ¼ã‚¯ã•ã‚Œã¦ã„ãªã‘ã‚Œã°) dpkg ãŒæ–°ã—ã„ãƒãƒ¼ã‚¸ãƒ§"
+"ãƒ³ã®ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã‚’ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã™ã‚‹æ™‚ã«ãã‚Œã‚‰ã®ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ä¸Šæ›¸ãã—ã¦ã—ã¾ã‚ãªã„ã‚ˆ"
+"ã†ã«ã™ã‚‹ãŸã‚ã« diversion ã‚’ä½¿ã†ã“ã¨ãŒã§ãã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:44
-#, fuzzy
 msgid ""
 "B<dpkg-divert> is the utility used to set up and update the list of "
 "diversions. It functions in three basic modes - adding, removing, and "
@@ -115,55 +109,53 @@ msgid ""
 "respectively. Additionally, it can print out the real name for a diverted "
 "file with B<--truename>. Other options (listed below) may also be specified."
 msgstr ""
-"B<dpkg-divert> ¤Ï diversions ¤Î¥ê¥¹¥È¤òÀßÄê¡¢¹¹¿·¤¹¤ë¤¿¤á¤Î¥æ¡¼¥Æ¥£¥ê¥Æ¥£¤Ç¤¢"
-"¤ë¡£¤³¤ì¤Ï 3 ¤Ä¤Î´ğËÜ¥â¡¼¥É¤Îµ¡Ç½¤ò¤â¤Ã¤Æ¤¤¤ë¡£diversion ¤ÎÄÉ²Ã¡¢ºï½ü¡¢¥ê¥¹¥È"
-"¤Ç¤¢¤ë¡£ ¤½¤ì¤¾¤ì --add¡¢--remove¡¢--list ¥ª¥×¥·¥ç¥ó¤Ç»ØÄê¤¹¤ë¡£¤µ¤é¤Ë ÂàÈò¤µ"
-"¤ì¤¿¥Õ¥¡¥¤¥ë¤Î¼Âºİ¤ÎÌ¾Á°¤òÉ½¼¨¤¹¤ë¤³¤È¤â¤Ç¤­¤ë¡£°Ê²¼¤Ë¤¢¤²¤é¤ì¤Æ¤¤¤ë Â¾¥ª¥×"
-"¥·¥ç¥ó¤â»ØÄê¤¹¤ë¤³¤È¤¬¤Ç¤­¤ë¡£"
+"B<dpkg-divert> ã¯ diversions ã®ãƒªã‚¹ãƒˆã‚’è¨­å®šã€æ›´æ–°ã™ã‚‹ãŸã‚ã®ãƒ¦ãƒ¼ãƒ†ã‚£ãƒªãƒ†ã‚£ã§ã‚"
+"ã‚‹ã€‚ã“ã‚Œã¯ 3 ã¤ã®åŸºæœ¬ãƒ¢ãƒ¼ãƒ‰ã®æ©Ÿèƒ½ã‚’ã‚‚ã£ã¦ã„ã‚‹ã€‚diversion ã®è¿½åŠ ã€å‰Šé™¤ã€ãƒªã‚¹ãƒˆ"
+"ã§ã‚ã‚‹ã€‚ãã‚Œãã‚Œ B<--add>ã€B<--remove>ã€B<--list> ã‚ªãƒ—ã‚·ãƒ§ãƒ³ã§æŒ‡å®šã™ã‚‹ã€‚ã•ã‚‰ã« B<--truename> ã«ã‚ˆã£ã¦é€€é¿ã•"
+"ã‚ŒãŸãƒ•ã‚¡ã‚¤ãƒ«ã®å®Ÿéš›ã®åå‰ã‚’è¡¨ç¤ºã™ã‚‹ã“ã¨ã‚‚ã§ãã‚‹ã€‚ä»¥ä¸‹ã«ã‚ã’ã‚‰ã‚Œã¦ã„ã‚‹ä»–ã‚ªãƒ—"
+"ã‚·ãƒ§ãƒ³ã‚‚æŒ‡å®šã™ã‚‹ã“ã¨ãŒã§ãã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-divert.8:44
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "OPTIONS"
-msgstr "¥ª¥×¥·¥ç¥ó"
+msgstr "ã‚ªãƒ—ã‚·ãƒ§ãƒ³"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:45
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--admindir>I< E<lt>directoryE<gt>>"
-msgstr "I<--admindir E<lt>directoryE<gt>>"
+msgstr "B<--admindir>I< E<lt>directoryE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:48
-#, fuzzy
 msgid ""
 "Set the dpkg data directory to I<E<lt>directoryE<gt>> (default: I</var/lib/"
 "dpkg>)."
 msgstr ""
-"dpkg ¥Ç¡¼¥¿¥Ç¥£¥ì¥¯¥È¥ê¤ò E<lt>directoryE<gt> ¤ËÀßÄê¤¹¤ë¡£(¥Ç¥Õ¥©¥ë¥È: /var/"
-"lib/dpkg)"
+"dpkg ãƒ‡ãƒ¼ã‚¿ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã‚’ I<E<lt>directoryE<gt>> ã«è¨­å®šã™ã‚‹ã€‚(ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆ: I</var/"
+"lib/dpkg>)"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:48
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--divert>I< E<lt>divert-toE<gt>>"
-msgstr "I<--divert E<lt>divert-toE<gt>>"
+msgstr "B<--divert>I< E<lt>divert-toE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:52
-#, fuzzy
 msgid ""
 "I<E<lt>divert-toE<gt>> is the location where the versions of "
 "I<E<lt>fileE<gt>>, as provided by other packages, will be diverted."
 msgstr ""
-"E<lt>packageE<gt> ¤Ï E<lt>fileE<gt> ¤¬ÂàÈò¤µ¤ì¤ë¤³¤È¤Î¤Ê¤¤¥Ñ¥Ã¥±¡¼¥¸¤ÎÌ¾Á°¤Ç"
-"¤¢¤ë¡£"
+"I<E<lt>divert-toE<gt>> ã¯ã€ä»–ã®ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã«ã‚ˆã£ã¦æä¾›ã•ã‚Œã‚‹ "
+"I<E<lt>fileE<gt>> ã‚’é€€é¿ã™ã‚‹ä½ç½®ã§ã‚ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:52
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--local>"
-msgstr "I<--local>"
+msgstr "B<--local>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:58
@@ -172,118 +164,110 @@ msgid ""
 "means, that there are no exceptions, and whatever package is installed, the "
 "file is diverted. This can be used by an admin to install a locally modified "
 "version."
-msgstr ""
+msgstr "å…¨ã¦ã®ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®ãã®ãƒ•ã‚¡ã‚¤ãƒ«ã‚’é€€é¿ã™ã‚‹å¯¾è±¡ã«ã™ã‚‹ã€‚ã¤ã¾ã‚Šã€ä¾‹å¤–ãªãã€ã©ã®ã‚ˆã†ãªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã‚’ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã—ã¦ã‚‚é€€é¿ã•ã‚Œã‚‹ã€‚ã“ã‚Œã‚’ä½¿ã£ã¦ã€ç®¡ç†è€…ãŒãƒ­ãƒ¼ã‚«ãƒ«ã®ä¿®æ­£ãƒãƒ¼ã‚¸ãƒ§ãƒ³ã‚’ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã™ã‚‹ã“ã¨ãŒã§ãã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:58
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--package>I< E<lt>packageE<gt>>"
-msgstr "I<--package E<lt>packageE<gt>>"
+msgstr "B<--package>I< E<lt>packageE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:63
-#, fuzzy
 msgid ""
 "I<E<lt>packageE<gt>> is the name of a package whose copy of "
 "I<E<lt>fileE<gt>> will not be diverted. i.e. I<E<lt>fileE<gt>> will be "
 "diverted for all packages except I<E<lt>packageE<gt>>."
 msgstr ""
-"E<lt>packageE<gt> ¤Ï E<lt>fileE<gt> ¤¬ÂàÈò¤µ¤ì¤ë¤³¤È¤Î¤Ê¤¤¥Ñ¥Ã¥±¡¼¥¸¤ÎÌ¾Á°¤Ç"
-"¤¢¤ë¡£"
+"I<E<lt>packageE<gt>> ã¯ã€I<E<lt>fileE<gt>> ãŒé€€é¿ã•ã‚Œã¦ã„ãªã„ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®åå‰"
+"ã§ã‚ã‚‹ã€‚ã¤ã¾ã‚Šã€I<E<lt>fileE<gt>> ã¯ I<E<lt>packageE<gt>> ã‚’é™¤ã„ãŸã™ã¹ã¦ã®"
+"ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã«ã‚ˆã£ã¦é€€é¿ã•ã‚Œã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:63
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--quiet>"
-msgstr "I<--quiet>"
+msgstr "B<--quiet>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:66
-#, fuzzy
 msgid "Quiet mode, i.e. no verbose output."
-msgstr "ÀÅ¤«¤Ê¥â¡¼¥É¡£¤Ä¤Ş¤êÌµÂÌ¤Ê½ĞÎÏ¤ò¤·¤Ê¤¤¡£"
+msgstr "é™ã‹ãªãƒ¢ãƒ¼ãƒ‰ã€‚ã¤ã¾ã‚Šç„¡é§„ãªå‡ºåŠ›ã‚’ã—ãªã„ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:66
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--rename>"
-msgstr "I<--rename>"
+msgstr "B<--rename>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:70
-#, fuzzy
 msgid ""
 "Actually move the file aside (or back). dpkg-divert will abort operation in "
 "case the destination file already exists."
 msgstr ""
-"¼Âºİ¤Ë¥Õ¥¡¥¤¥ë¤ò°ÜÆ°¤¹¤ë(¤â¤·¤¯¤ÏÌá¤¹)¡£dpkg-divert ¤Ï°ÜÆ°Àè¤Î¥Õ¥¡¥¤¥ë¤¬ ´û¤Ë"
-"Â¸ºß¤·¤Æ¤¤¤ë¤ÈÆ°ºî¤òÃæÃÇ¤¹¤ë¡£"
+"å®Ÿéš›ã«ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ç§»å‹•ã™ã‚‹ (ã‚‚ã—ãã¯æˆ»ã™)ã€‚dpkg-divert ã¯ç§»å‹•å…ˆã®ãƒ•ã‚¡ã‚¤ãƒ«ãŒæ—¢ã«"
+"å­˜åœ¨ã—ã¦ã„ã‚‹ã¨å‹•ä½œã‚’ä¸­æ–­ã™ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:70
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--test>"
-msgstr "I<--test>"
+msgstr "B<--test>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:73
-#, fuzzy
 msgid "Test mode, i.e. don't actually perform any changes, just demonstrate."
 msgstr ""
-"¥Æ¥¹¥È¥â¡¼¥É¡£¤Ä¤Ş¤ê¼Âºİ¤Ë¤Ï¤Ê¤Ë¤â¼Â¹Ô¤»¤º¡¢¤Ê¤Ë¤ò¤¹¤ë¤«¤òÉ½¼¨¤¹¤ë¤À¤±¤Ç¤¢"
-"¤ë¡£"
+"ãƒ†ã‚¹ãƒˆãƒ¢ãƒ¼ãƒ‰ã€‚ã¤ã¾ã‚Šå®Ÿéš›ã«ã¯ãªã«ã‚‚å®Ÿè¡Œã›ãšã€ãªã«ã‚’ã™ã‚‹ã‹ã‚’è¡¨ç¤ºã™ã‚‹ã ã‘ã§ã‚"
+"ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:73
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--help>"
-msgstr "I<--help>"
+msgstr "B<--help>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:76
-#, fuzzy
 msgid "Output short usage instructions, and exit successfully."
-msgstr "¥Ğ¡¼¥¸¥ç¥ó¤È´ÊÃ±¤ÊÍøÍÑË¡¤òÉ½¼¨¤·¤ÆÀµ¾ï½ªÎ»¤¹¤ë¡£"
+msgstr "ãƒãƒ¼ã‚¸ãƒ§ãƒ³ã¨ç°¡å˜ãªåˆ©ç”¨æ³•ã‚’è¡¨ç¤ºã—ã¦æ­£å¸¸çµ‚äº†ã™ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:76
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--version>"
-msgstr "I<--version>"
+msgstr "B<--version>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:79
-#, fuzzy
 msgid "Output program name and version and exit successfully."
-msgstr "¥×¥í¥°¥é¥àÌ¾¤È¥Ğ¡¼¥¸¥ç¥ó¤òÉ½¼¨¤·¤ÆÀµ¾ï½ªÎ»¤¹¤ë¡£"
+msgstr "ãƒ—ãƒ­ã‚°ãƒ©ãƒ åã¨ãƒãƒ¼ã‚¸ãƒ§ãƒ³ã‚’è¡¨ç¤ºã—ã¦æ­£å¸¸çµ‚äº†ã™ã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-divert.8:80
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NOTES"
-msgstr "Ãí°Õ"
+msgstr "æ³¨æ„"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:84
-#, fuzzy
 msgid ""
 "When adding, default is B<--local> and B<--divert> I<E<lt>originalE<gt>."
 "distrib>. When removing, B<--package> or B<--local> and B<--divert> must "
 "match if specified."
 msgstr ""
-"ÄÉ²Ã¤¹¤ë»ş¤Ï¡¢¥Ç¥Õ¥©¥ë¥È¤Ï --local ¤È --divert E<lt>originalE<gt>.distrib ¤Ç"
-"¤¢¤ë¡£ ºï½ü¤¹¤ëÌä¤Ï¡¢--package ¤â¤·¤¯¤Ï --local ¤È --divert ¤Ï»ØÄê¤µ¤ì¤Æ¤¤¤ì"
-"¤Ğ ÄÉ²Ã¤·¤¿»ş¤È°ìÃ×¤·¤Æ¤¤¤Ê¤±¤ì¤Ğ¤¤¤±¤Ê¤¤¡£"
+"è¿½åŠ ã™ã‚‹æ™‚ã¯ã€ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã¯ B<--local> ã¨ B<--divert> I<E<lt>originalE<gt>.distrib> ã§"
+"ã‚ã‚‹ã€‚å‰Šé™¤ã™ã‚‹æ™‚ã¯ã€B<--package> ã‚‚ã—ãã¯ B<--local> ã¨ B<--divert> ã¯æŒ‡å®šã•ã‚Œã¦ã„ã‚Œ"
+"ã°ä¸€è‡´ã—ã¦ã„ãªã‘ã‚Œã°ã„ã‘ãªã„ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:86
-#, fuzzy
 msgid "Directories can't be diverted with B<dpkg-divert>."
-msgstr "dpkg-divert ¤Ç¤Ï¥Ç¥£¥ì¥¯¥È¥ê¤ÏÂàÈò¤Ç¤­¤Ê¤¤¡£"
+msgstr "B<dpkg-divert> ã§ã¯ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã¯é€€é¿ã§ããªã„ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:92
-#, fuzzy
 msgid ""
 "Care should be taken when diverting shared libraries, B<ldconfig>(8)  "
 "creates a symbolic link based on the DT_SONAME field embedded in the "
@@ -291,17 +275,17 @@ msgid ""
 "symlink may end up pointing at the diverted library, if a diverted library "
 "has the same SONAME as the undiverted one."
 msgstr ""
-"¶¦Í­¥é¥¤¥Ö¥é¥ê¤òÂàÈò¤¹¤ë¾ì¹ç¡¢Ãí°Õ¤¹¤Ù¤­¤Ç¤¢¤ë¡£ldconfig(8)¤Ï ¥é¥¤¥Ö¥é¥ê¤ËËä"
-"¤á¹ş¤Ş¤ì¤Æ¤¤¤ë DT_SONAME ¥Õ¥£¡¼¥ë¥É¤Ë´ğ¤Å¤¤¤Æ¡¢ ¥·¥ó¥Ü¥ê¥Ã¥¯¥ê¥ó¥¯¤òºîÀ®¤¹"
-"¤ë¡£ldconfig ¤ÏÂàÈò¤µ¤»¤ë¤³¤È¤¬¤Ç¤­¤Ê¤¤¤¿¤á ¤Ç¤¢¤ë(dpkg ¤À¤±¤¬¤Ç¤­¤ë)¡£¤â¤·Âà"
-"Èò¤·¤¿¥é¥¤¥Ö¥é¥ê¤ÈÂàÈò¤·¤Æ¤¤¤Ê¤¤ ¥é¥¤¥Ö¥é¥ê¤¬Æ±¤¸ SONAME ¤Ç¤¢¤ì¤Ğ¡¢ºÇ½ªÅª¤Ë¥·"
-"¥ó¥Ü¥ê¥Ã¥¯¥ê¥ó¥¯¤ÏÂàÈò¤·¤¿ ¥é¥¤¥Ö¥é¥ê¤ò»Ø¤¹¡£"
+"å…±æœ‰ãƒ©ã‚¤ãƒ–ãƒ©ãƒªã‚’é€€é¿ã™ã‚‹å ´åˆã€æ³¨æ„ã™ã¹ãã§ã‚ã‚‹ã€‚B<ldconfig>(8) ã¯ãƒ©ã‚¤ãƒ–ãƒ©ãƒªã«åŸ‹"
+"ã‚è¾¼ã¾ã‚Œã¦ã„ã‚‹ DT_SONAME ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ã«åŸºã¥ã„ã¦ã€ã‚·ãƒ³ãƒœãƒªãƒƒã‚¯ãƒªãƒ³ã‚¯ã‚’ä½œæˆã™"
+"ã‚‹ã€‚ldconfig ã¯é€€é¿ã•ã›ã‚‹ã“ã¨ãŒã§ããªã„ãŸã‚ã§ã‚ã‚‹ (dpkg ã ã‘ãŒã§ãã‚‹)ã€‚ã‚‚ã—é€€"
+"é¿ã—ãŸãƒ©ã‚¤ãƒ–ãƒ©ãƒªã¨é€€é¿ã—ã¦ã„ãªã„ãƒ©ã‚¤ãƒ–ãƒ©ãƒªãŒåŒã˜ SONAME ã§ã‚ã‚Œã°ã€æœ€çµ‚çš„ã«ã‚·"
+"ãƒ³ãƒœãƒªãƒƒã‚¯ãƒªãƒ³ã‚¯ã¯é€€é¿ã—ãŸãƒ©ã‚¤ãƒ–ãƒ©ãƒªã‚’æŒ‡ã™ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-divert.8:93
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "EXAMPLES"
-msgstr "EXAMPLES"
+msgstr "ä¾‹"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:97
@@ -310,22 +294,25 @@ msgid ""
 "e. directs all packages providing I</usr/bin/example> to install it as I</"
 "usr/bin/example.foo>, performing the rename if required:"
 msgstr ""
+"ã™ã¹ã¦ã® I</usr/bin/example> ã‚’ I</usr/bin/example.foo> ã«é€€é¿ã•ã›ã‚‹ã€ã¤ã¾"
+"ã‚Šã€I</usr/bin/example> ã‚’æä¾›ã™ã‚‹ã™ã¹ã¦ã®ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã«å¯¾ã—ã¦å¿…è¦ã§ã‚ã‚Œã° I</"
+"usr/bin/example.foo> ã¨å¤‰æ›´ã—ã¦ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã•ã›ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:99
 msgid "dpkg-divert --divert /usr/bin/example.foo --rename /usr/bin/example"
-msgstr ""
+msgstr "dpkg-divert --divert /usr/bin/example.foo --rename /usr/bin/example"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:101
 #: ../../../man/po4a/../C/dpkg-divert.8:111
 msgid "To remove that diversion:"
-msgstr ""
+msgstr "diversion ã‚’å‰Šé™¤ã™ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:103
 msgid "dpkg-divert --rename --remove /usr/bin/example"
-msgstr ""
+msgstr "dpkg-divert --rename --remove /usr/bin/example"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:107
@@ -333,6 +320,8 @@ msgid ""
 "To divert any package trying to install I</usr/bin/example> to I</usr/bin/"
 "example.foo>, except your own I<wibble> package:"
 msgstr ""
+"I</usr/bin/example> ã‚’ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã—ã‚ˆã†ã¨ã™ã‚‹ã™ã¹ã¦ã®ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã‚’ I</usr/"
+"bin/example.foo> ã«é€€é¿ã€ãŸã ã—è‡ªä½œã® I<wibble> ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã‚’é™¤ãã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:109
@@ -340,95 +329,72 @@ msgid ""
 "dpkg-divert --package wibble --divert /usr/bin/example.foo --rename /usr/bin/"
 "example"
 msgstr ""
+"dpkg-divert --package wibble --divert /usr/bin/example.foo --rename /usr/bin/"
+"example"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:113
 msgid "dpkg-divert --package wibble --rename --remove /usr/bin/example"
-msgstr ""
+msgstr "dpkg-divert --package wibble --rename --remove /usr/bin/example"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-divert.8:114
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "FILES"
-msgstr "¥Õ¥¡¥¤¥ë"
+msgstr "ãƒ•ã‚¡ã‚¤ãƒ«"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:115
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "I</var/lib/dpkg/diversions>"
 msgstr "I</var/lib/dpkg/diversions>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:120
-#, fuzzy
 msgid ""
 "File which contains the current list of diversions of the system. It is "
 "located in the dpkg administration directory, along with other files "
 "important to dpkg, such as `status' or `available'."
 msgstr ""
-"¥·¥¹¥Æ¥à¤Î¸½ºß¤ÎÂàÈò¥ê¥¹¥È¤ò´Ş¤à¥Õ¥¡¥¤¥ë¡£¤³¤ì¤Ï dpkg ¤Ç»È¤ï¤ì¤ë½ÅÍ×¤Ê¥Õ¥¡¥¤"
-"¥ë `status' ¤ä `available' ¤¬¤¢¤ë dpkg ¤Î´ÉÍı¥Ç¥£¥ì¥¯¥È¥ê¤Ë¤¢¤ë¡£"
+"ã‚·ã‚¹ãƒ†ãƒ ã®ç¾åœ¨ã®é€€é¿ãƒªã‚¹ãƒˆã‚’å«ã‚€ãƒ•ã‚¡ã‚¤ãƒ«ã€‚ã“ã‚Œã¯ dpkg ã§ä½¿ã‚ã‚Œã‚‹é‡è¦ãªãƒ•ã‚¡ã‚¤"
+"ãƒ« `status' ã‚„ `available' ãŒã‚ã‚‹ dpkg ã®ç®¡ç†ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã«ã‚ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:123
-#, fuzzy
 msgid ""
 "Note: B<dpkg-divert> preserves the old copy of this file, with extension \"-"
 "old\", before replacing it with the new one."
 msgstr ""
-"Ãí°Õ: dpkg-divert ¤Ï¤³¤Î¥Õ¥¡¥¤¥ë¤ò¹¹¿·¤¹¤ë»ş¤Ë¡¢¸Å¤¤¥Ğ¡¼¥¸¥ç¥ó¤ò \"-old\" ¤È"
-"¤¤¤¦Ì¾Á°¤ò¤Ä¤±¤¿¥Õ¥¡¥¤¥ë¤Ë¥³¥Ô¡¼¤·¤Æ¤ª¤¯¡£"
+"æ³¨æ„: B<dpkg-divert> ã¯ã“ã®ãƒ•ã‚¡ã‚¤ãƒ«ã‚’æ›´æ–°ã™ã‚‹æ™‚ã«ã€å¤ã„ãƒãƒ¼ã‚¸ãƒ§ãƒ³ã‚’ \"-old\" ã¨"
+"ã„ã†åå‰ã‚’ã¤ã‘ãŸãƒ•ã‚¡ã‚¤ãƒ«ã«ã‚³ãƒ”ãƒ¼ã—ã¦ãŠãã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-divert.8:124
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SEE ALSO"
-msgstr "´ØÏ¢¹àÌÜ"
+msgstr "é–¢é€£é …ç›®"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:126
-#, fuzzy
 msgid "B<dpkg>(1)."
-msgstr "B<dpkg>(8)."
+msgstr "B<dpkg>(1)."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-divert.8:126
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "AUTHOR"
-msgstr "Ãø¼Ô"
+msgstr "è‘—è€…"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:128
-#, fuzzy
 msgid "Copyright (C) 1995 Ian Jackson."
 msgstr "Copyright (C) 1995 Ian Jackson."
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:130
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
 msgstr ""
 "This is free software; see the GNU General Public Licence version 2 or later "
-"for copying conditions.  There is NO warranty."
-
-# type: Plain text
-#, fuzzy
-#~ msgid "I<E<lt>divert-toE<gt>> is the name used by other packages' versions."
-#~ msgstr "E<lt>divert-toE<gt> ¤ÏÂ¾¤Î¥Ñ¥Ã¥±¡¼¥¸¤Ç»È¤ï¤ì¤ëÌ¾Á°¤Ç¤¢¤ë¡£"
-
-# type: Plain text
-#, fuzzy
-#~ msgid "Specifies that all packages' versions are diverted."
-#~ msgstr "Á´¤Æ¤Î¥Ñ¥Ã¥±¡¼¥¸¤òÂàÈò¤¹¤ëÂĞ¾İ¤Ë¤¹¤ë¡£"
-
-# type: TH
-#, fuzzy
-#~ msgid "DPKG-DIVERT"
-#~ msgstr "DPKG-DIVERT"
-
-# type: TH
-#, fuzzy
-#~ msgid "December 1999"
-#~ msgstr "December 1999"
+"for copying conditions. There is NO warranty."
