--- a/debian/changelog
+++ b/debian/changelog
@@ -57,7 +57,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - initialisation of the dselect.1, dpkg-source.1, dpkg-query.1,
       install-info.8, dpkg-deb.1, and dpkg-split.1 translations.
       Closes: #381488
-  * Japanese (KISE Hiroshi). Closes: 381141, #381865
+  * Japanese (KISE Hiroshi). Closes: 381141, #381865, #384768
     - 822-date.1
     - deb.5
     - deb-old.5
@@ -66,6 +66,8 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - dpkg-name.1
     - dpkg-scanpackages.1
     - dpkg-statoverride.8
+    - dpkg-divert.8
+    - dpkg-query.1
 
   [ Nicolas François ]
   * Specify --null before the -T tar's option to avoid the "tar: -: file name
