--- a/man/po4a/deb-old.5/po/ja.po
+++ b/man/po4a/deb-old.5/po/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-07-26 22:40+0900\n"
+"PO-Revision-Date: 2006-08-16 11:15+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
-"Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
+"Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -162,11 +162,3 @@ msgstr "関連項目"
 msgid "B<deb>(5), B<dpkg-deb>(1), B<deb-control>(5)."
 msgstr ""
 "B<deb>(5), B<dpkg-deb>(1), B<deb-control>(5)."
-
-# type: TH
-#~ msgid "DEB-OLD"
-#~ msgstr "DEB-OLD"
-
-# type: TH
-#~ msgid "January 2000"
-#~ msgstr "January 2000"
