--- a/man/po4a/deb.5/po/ja.po
+++ b/man/po4a/deb.5/po/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-27 22:47+0200\n"
-"PO-Revision-Date: 2006-08-02 22:26+0900\n"
+"PO-Revision-Date: 2006-08-16 11:14+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
-"Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
+"Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -189,11 +189,3 @@ msgstr "関連項目"
 #: ../../../man/po4a/../C/deb.5:70
 msgid "B<deb-old>(5), B<dpkg-deb>(1), B<deb-control>(5)."
 msgstr "B<deb-old>(5), B<dpkg-deb>(1), B<deb-control>(5)."
-
-# type: TH
-#~ msgid "DEB"
-#~ msgstr "DEB"
-
-# type: TH
-#~ msgid "January 2000"
-#~ msgstr "January 2000"
