--- a/man/po4a/dpkg-checkbuilddeps.1/po/ja.po
+++ b/man/po4a/dpkg-checkbuilddeps.1/po/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2006-08-02 22:25+0900\n"
+"PO-Revision-Date: 2006-08-16 11:12+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
-"Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
+"Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -147,11 +147,3 @@ msgid ""
 msgstr ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions.  There is NO warranty."
-
-# type: TH
-#~ msgid "DPKG-CHECKBUILDDEPS"
-#~ msgstr "DPKG-CHECKBUILDDEPS"
-
-# type: TH
-#~ msgid "February 2001"
-#~ msgstr "February 2001"
