--- a/man/po4a/dpkg-name.1/po/ja.po
+++ b/man/po4a/dpkg-name.1/po/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-28 21:10+0200\n"
-"PO-Revision-Date: 2006-08-06 23:33+0900\n"
+"PO-Revision-Date: 2006-08-19 11:02+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
-"Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
+"Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -157,8 +157,8 @@ msgstr ""
 "クトリの名前のかわりにそのディレクトリにファイルを移動する。通常、ターゲット"
 "ディレクトリは `unstable/binary-E<lt>アーキテクチャE<gt>/E<lt>セクション"
 "E<gt>' である。もし control でのセクション情報がない場合は `no-section' とみ"
-"なされる。そしてこのとき、またはセクションが `non-free' や `contrib' の場合"
-"は、ターゲットディレクトリは `E<lt>セクションE<gt>/binary-E<lt>アーキテクチャ"
+"なされる。そしてこの場合、`non-free' や `contrib' セクションの時と同様に"
+"ターゲットディレクトリは `E<lt>セクションE<gt>/binary-E<lt>アーキテクチャ"
 "E<gt>' になる。セクションフィールドは必須ではないので多くのパッケージが `no-"
 "section' の場所にいってしまうだろう。このオプションを使う時は注意すること。厄"
 "介である。"
@@ -295,7 +295,7 @@ msgstr ""
 "パッケージによっては E<lt>パッケージE<gt>_E<lt>バージョンE<gt>_E<lt>アーキテ"
 "クチャE<gt>.deb という名前ではない。 dpkg-name によって改名されたパッケージは"
 "このような名前になる。一般には、これは B<dselect>(1)/ B<dpkg>(1) によってパッ"
-"ケージがどのようにインストールされ方には影響はないが、この名前構造に依存して"
+"ケージがどのようにインストールされたかには影響はないが、この名前構造に依存して"
 "いるインストールツールによっては影響があるかもしれない。"
 
 # type: SH
@@ -329,7 +329,3 @@ msgstr ""
 "Copyright 1995,1996 Erick Branderhorst.  B<dpkg-name> is free software; see "
 "the GNU General Public Licence version 2 or later for copying conditions. "
 "There is B<no> warranty."
-
-# type: TH
-#~ msgid "May 1996"
-#~ msgstr "May 1996"
