--- a/man/po4a/dpkg-scanpackages.1/po/ja.po
+++ b/man/po4a/dpkg-scanpackages.1/po/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-27 22:47+0200\n"
-"PO-Revision-Date: 2006-08-04 19:51+0900\n"
+"PO-Revision-Date: 2006-08-16 11:14+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
-"Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
+"Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -260,11 +260,3 @@ msgstr "関連項目"
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:135
 msgid "B<dpkg>(1), B<dselect>(1), B<dpkg-scansources>(1)."
 msgstr "B<dpkg>(1), B<dselect>(1), B<dpkg-scansources>(1)."
-
-# type: TH
-#~ msgid "DPKG-SCANPACKAGES"
-#~ msgstr "DPKG-SCANPACKAGES"
-
-# type: TH
-#~ msgid "1996-07-08"
-#~ msgstr "1996-07-08"
