Updated Portuguese translation to 920t

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-27  Miguel Figueiredo <elmig@debianpt.org>
+
+	* po/pt.po: Updated to 920t.
+
 2006-08-19  Daniel Nylander  <yeager@lidkoping.net>
 
 	* po/sv.po: Updated to 920t.
