--- a/po/pt.po
+++ b/po/pt.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-07-11 00:42+0100\n"
+"PO-Revision-Date: 2006-08-27 17:41+0100\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -1605,7 +1605,7 @@ msgstr " recomenda "
 
 #: src/depcon.c:156
 msgid " breaks "
-msgstr ""
+msgstr " danifica "
 
 #: src/depcon.c:157
 msgid " conflicts with "
@@ -2752,23 +2752,23 @@ msgid "package architecture (%s) does not match system (%s)"
 msgstr "a arquitectura do pacote (%s) não coincide com a do sistema (%s)"
 
 #: src/processarc.c:256
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: regarding %s containing %s:\n"
 " package uses Breaks; not supported in this dpkg\n"
 msgstr ""
-"dpkg: acerca de %s contendo %s, problema de pre-dependência:\n"
-"%s"
+"dpkg: acerca de %s que contém %s:\n"
+" o pacote utiliza Breaks; não suportado neste dpkg\n"
 
 #: src/processarc.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "unsupported dependency problem - not installing %.250s"
-msgstr "problema de pré-dependência - a não instalar %.250s"
+msgstr "problema de dependência não suportada - a não instalar %.250s"
 
 #: src/processarc.c:262
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring Breaks !\n"
-msgstr "dpkg: aviso - a ignorar problema de pré-dependência !\n"
+msgstr "dpkg: aviso - a ignorar Breaks !\n"
 
 #: src/processarc.c:275
 #, c-format
