German dselect translation updated. Sven Joachim is the new dpkg and dselect German translation maintainer.

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,8 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
 
   [ Updated dselect Translations ]
   * Catalan (Robert Millan).
+  * German (Sven Joachim). Closes: #384843
+    (Sven is now the new German translation maintainer for dpkg and dselect.)
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann). Closes: #379030
