--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-29  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Updated to 289t.
+	* LINGUAS: New German translation maintainer.
+
 2006-08-18  Robert Millan  <rmh@aybabtu.com>
 
 	* ca.po: Fixed spelling errors.
