--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -4,11 +4,11 @@
 
 2006-08-27  Miguel Figueiredo <elmig@debianpt.org>
 
-	* po/pt.po: Updated to 920t.
+	* pt.po: Updated to 920t.
 
 2006-08-19  Daniel Nylander  <yeager@lidkoping.net>
 
-	* po/sv.po: Updated to 920t.
+	* sv.po: Updated to 920t.
 
 2006-08-18  Miroslav Kure  <kurem@debian.cz>
 
