Updated Dutch translations

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-29  Bart Cornelis <cobaco@skolelinux.no>
+	
+	* nl.po: Updated translation
+
 2006-08-29  Sven Joachim  <svenjoac@gmx.de>
 
 	* LINGUAS: New German translation maintainer.
