Update Sven Joachim's email address.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -40,11 +40,11 @@
 	* *.po: Merged with dpkg.pot. Formerly complete translations
 	become 916t3f1u.
 
-2006-08-07  Sven Joachim <sven_joachim@web.de>
+2006-08-07  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Fix typos.
 
-2006-08-05  Sven Joachim <sven_joachim@web.de>
+2006-08-05  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Updated to 916t.
 
