Fixed extra space

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-30  Miguel Figueiredo  <elmig@debianpt.org>
+
+	* pt.po: fixed extra space
+
 2006-08-29  Bart Cornelis  <cobaco@skolelinux.no>
 	
 	* nl.po: Updated translation
