[INTL:da] Updated Danish dselect program translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Catalan (Robert Millan).
   * German (Sven Joachim). Closes: #384843
     (Sven is now the new German translation maintainer for dpkg and dselect.)
+  * Danish (Claus Hindsgaul).
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann). Closes: #379030
