--- a/dselect/po/da.po
+++ b/dselect/po/da.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: dpkg_1.10.19_da\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-03-08 09:23+0100\n"
+"PO-Revision-Date: 2006-09-02 10:23+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: dselect/basecmds.cc:121
@@ -865,9 +865,11 @@ msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
 msgstr ""
+"Brug: %s [<tilvalg> ...] [<handling> ...]\n"
+"\n"
 
 #: dselect/main.cc:175
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --admindir <directory>     Use <directory> instead of %s.\n"
@@ -877,20 +879,12 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
-"Brug: %s [<tilvalg> ...] [<handling> ...]\n"
-"\n"
 "Tilvalg:\n"
 "  --admindir <mappe>         Benyt <mappe> i stedet for %s.\n"
 "  --expert                   Aktivér eksperttilstand.\n"
 "  --debug <fil> | -D<fil>    Aktiverer aflusning, sender uddata til <file>.\n"
 "  --colour | --color skærmområde:[forgrund],[baggrund][:attr[+attr+..]]\n"
 "                             Indstil skærmfarver.\n"
-"  --help                     Vis denne hjælpebesked.\n"
-"  --version                  Vis versionsnummer.\n"
-"  --license                  Vis licensen.\n"
-"\n"
-"Handlinger:\n"
-"  access update select install config remove quit\n"
 "\n"
 
 #: dselect/main.cc:184
@@ -901,6 +895,10 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
+"  --help                     Vis denne hjælpebesked.\n"
+"  --version                  Vis versionsnummer.\n"
+"  --license | --licence      Vis licensoplysninger.\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -909,6 +907,9 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"Handlinger:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:194
 #, c-format
@@ -1721,3 +1722,4 @@ msgstr "Inst.ver"
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Tilg.ver"
+
