--- a/debian/changelog
+++ b/debian/changelog
@@ -60,7 +60,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - initialisation of the dselect.1, dpkg-source.1, dpkg-query.1,
       install-info.8, dpkg-deb.1, and dpkg-split.1 translations.
       Closes: #381488
-  * Japanese (KISE Hiroshi). Closes: 381141, #381865, #384768
+  * Japanese (KISE Hiroshi). Closes: 381141, #381865, #384768, #385675
     - 822-date.1
     - deb.5
     - deb-old.5
@@ -71,6 +71,10 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - dpkg-statoverride.8
     - dpkg-divert.8
     - dpkg-query.1
+    - deb-control.5
+    - dpkg-deb.1
+    - install-info.8
+    - start-stop-daemon.8
 
   [ Nicolas François ]
   * Specify --null before the -T tar's option to avoid the "tar: -: file name
