--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,19 @@
+2006-09-02  KISE Hiroshi  <kise@fuyuneko.jp>
+
+	* po4a/add_ja/deb-control.5.ja.add: Recode the addendum in UTF-8.
+	* po4a/add_ja/dpkg-deb.1.ja.add: Likewise.
+	* po4a/add_ja/install-info.8.ja.add: Likewise.
+	* po4a/add_ja/start-stop-daemon.8.ja.add: Likewise.
+	* po4a/deb-control.5/deb-control.5.cfg: Specify the po4a options
+	for the Japanese translation.
+	* po4a/dpkg-deb.1/dpkg-deb.1.cfg: Likewise.
+	* po4a/install-info.8/install-info.8.cfg: Likewise.
+	* po4a/start-stop-daemon.8/start-stop-daemon.8.cfg: Likewise.
+	* po4a/deb-control.5/po/ja.po: Updated translation.
+	* po4a/dpkg-deb.1/po/ja.po: Likewise.
+	* po4a/install-info.8/po/ja.po: Likewise.
+	* po4a/start-stop-daemon.8/po/ja.po: Likewise.
+
 2006-08-26  KISE Hiroshi  <kise@fuyuneko.jp>
 
 	* po4a/add_ja/dpkg-divert.8.ja.add: Recode the addendum in UTF-8.
