Add the changelog entry for the last dselect translation update.

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-02  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
+
+	* da.po: Updated to 289t.
+
 2006-08-29  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Updated to 289t.
