--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * German (Sven Joachim). Closes: #381409, #381740
   * Catalan (Robert Millan). Closes: #383448
   * Swedish (Daniel Nylander). Closes: #383643
+  * Japanese (Kenshi Muto). Closes: #386963
 
   [ Updated dselect Translations ]
   * Catalan (Robert Millan).
