New Japanese translations: dpkg(1), dselect(1), update-alternatives(8). And updated translations: dpkg-deb(1), deb-control(5), start-stop-daemon(8).

--- a/debian/changelog
+++ b/debian/changelog
@@ -61,7 +61,8 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - initialisation of the dselect.1, dpkg-source.1, dpkg-query.1,
       install-info.8, dpkg-deb.1, and dpkg-split.1 translations.
       Closes: #381488
-  * Japanese (KISE Hiroshi). Closes: 381141, #381865, #384768, #385675
+  * Japanese (KISE Hiroshi).
+    Closes: 381141, #381865, #384768, #385675, #386965
     - 822-date.1
     - deb.5
     - deb-old.5
@@ -76,6 +77,9 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - dpkg-deb.1
     - install-info.8
     - start-stop-daemon.8
+    - dpkg.1
+    - dselect.1
+    - update-alternatives.8
 
   [ Nicolas François ]
   * Specify --null before the -T tar's option to avoid the "tar: -: file name
