--- a/man/po4a/start-stop-daemon.8/po/ja.po
+++ b/man/po4a/start-stop-daemon.8/po/ja.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-23 16:11+0200\n"
-"PO-Revision-Date: 2006-08-27 23:37+0900\n"
+"PO-Revision-Date: 2006-09-06 00:55+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
 "Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -146,8 +146,8 @@ msgstr ""
 "および gid にマッチするプロセスをプロセステーブルから検索する。B<--start> が"
 "指定されている場合にマッチするプロセスがあれば、デーモンは起動されない。"
 "B<--stop> が指定されていれば、マッチするプロセスすべてに KILL シグナルが送ら"
-"れる。しかし、長期生存する子プロセスを持つデーモンを B<--stop> で制御する場合"
-"は pidfile を指定する必要がある。"
+"れる。そのため、B<--stop> を与えられても生き延びる必要があるような、長生きする"
+"子プロセスを持つデーモンには、 pidfile を指定しなければならない。"
 
 # type: SH
 #: ../../../man/po4a/../C/start-stop-daemon.8:88
@@ -485,7 +485,7 @@ msgstr "B<-v>|B<--verbose>"
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:250
 msgid "Print verbose informational messages."
-msgstr "詳しい参考情報を出力する。"
+msgstr "詳しい情報を出力する。"
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:250
@@ -531,5 +531,5 @@ msgid ""
 "Manual page by Klee Dienes E<lt>klee@mit.eduE<gt>, partially reformatted by "
 "Ian Jackson."
 msgstr ""
-"このマニュアルは Klee Dienes E<lt>klee@mit.eduE<gt> によって書かれた。一部 "
-"Ian Jackson による整形。"
+"このマニュアルは Klee Dienes E<lt>klee@mit.eduE<gt> によって書かれた。"
+"Ian Jackson が部分的に整形した。"
