--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Catalan (Robert Millan). Closes: #383448
   * Swedish (Daniel Nylander). Closes: #383643
   * Japanese (Kenshi Muto). Closes: #386963
+  * Slovak (Peter Mann). Closes: #387282
 
   [ Updated dselect Translations ]
   * Catalan (Robert Millan).
