--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-13  Peter Mann  <Peter.Mann@tuke.sk>
+
+	* sk.po: Updated to 920t.
+
 2006-09-11  Kenshi Muto  <kmuto@debian.org>
 
 	* ja.po: Updated to 920t.
