Fix typos in the dpkg's Japanese translation.

--- a/po/ja.po
+++ b/po/ja.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13 r503\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-09-11 10:56+0900\n"
+"PO-Revision-Date: 2006-09-13 22:11+0900\n"
 "Last-Translator: Kenshi Muto <kmuto@debian.org>\n"
 "Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3042,8 +3042,6 @@ msgid ""
 "  -S|--search <pattern> ...        Find package(s) owning file(s).\n"
 "\n"
 msgstr ""
-"使い方: %s [オプション ...] コマンド\n"
-"\n"
 "コマンド:\n"
 "  -s|--status <パッケージ名> ...      パッケージ状態の詳細を表示\n"
 "  -p|--print-avail <パッケージ名> ... 利用可能なバージョンの詳細を表示\n"
@@ -5007,7 +5005,7 @@ msgstr "%s: ファイル `%s' のエントリおよびメニューエントリ `
 #: scripts/install-info.pl:440
 #, perl-format
 msgid "%s: no entry for file `%s'"
-msgstr "ファイル `%s' のエントリがありません"
+msgstr "%s: ファイル `%s' のエントリがありません"
 
 #: scripts/install-info.pl:493
 #, perl-format
