Updated spanish translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Swedish (Daniel Nylander). Closes: #383643
   * Japanese (Kenshi Muto). Closes: #386963
   * Slovak (Peter Mann). Closes: #387282
+  * Spanish (Javier Fernandez-Sanguino). Closes: #386759
 
   [ Updated dselect Translations ]
   * Catalan (Robert Millan).
