--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-14  Javier Fernandez-Sanguino  <jfs@debian.org>
+
+	* es.po: Updated to 920t.
+	
 2006-09-13  Stefano Canepa  <sc@linux.it>
 
 	* it.po: Updated to 920t.
