French translation back to 100%

--- a/po/fr.po
+++ b/po/fr.po
@@ -24,7 +24,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-06-23 02:43+0200\n"
+"PO-Revision-Date: 2006-09-05 07:06+0100\n"
 "Last-Translator: Frédéric Bothamy <frederic.bothamy@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1708,7 +1708,7 @@ msgstr " recommande "
 
 #: src/depcon.c:156
 msgid " breaks "
-msgstr ""
+msgstr " casse (« breaks »)"
 
 #: src/depcon.c:157
 msgid " conflicts with "
@@ -2905,23 +2905,24 @@ msgstr ""
 "l'architecture du paquet (%s) ne correspond pas à celle du système (%s)"
 
 #: src/processarc.c:256
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: regarding %s containing %s:\n"
 " package uses Breaks; not supported in this dpkg\n"
 msgstr ""
-"dpkg : concernant %s contenant %s, problème de pré-dépendance :\n"
-"%s"
+"dpkg : concernant %s contenant %s :\n"
+"ce paquet utilise la relation « Breaks », qui n'est pas gérée dans\n"
+"cette version de dpkg\n"
 
 #: src/processarc.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "unsupported dependency problem - not installing %.250s"
-msgstr "problème de pré-dépendance - %.250s non installé"
+msgstr "problème de dépendance non gérée : %.250s non installé"
 
 #: src/processarc.c:262
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring Breaks !\n"
-msgstr "dpkg : avertissement - problème de pré-dépendance ignoré !\n"
+msgstr "dpkg : avertissement - relation « Breaks » ignorée !\n"
 
 #: src/processarc.c:275
 #, c-format
