--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-16  Frédéric Bothamy  <frederic.bothamy@free.fr>
+
+	* fr.po: Updated to 920t.
+	
 2006-09-14  Javier Fernandez-Sanguino  <jfs@debian.org>
 
 	* es.po: Updated to 920t.
@@ -54,7 +58,7 @@
 
 	* ca.po: Fixed spelling errors.
 
-2006-08-18  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2006-08-18  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
 	* ro.po: updated to 920t
 
