Fix a typo in the Italian translation of dpkg.

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Japanese (Kenshi Muto). Closes: #386963
   * Slovak (Peter Mann). Closes: #387282
   * Spanish (Javier Fernandez-Sanguino). Closes: #386759
+  * Italian (Typo) (Davide Viti). Closes: #387821
 
   [ Updated dselect Translations ]
   * Catalan (Robert Millan).
