--- a/po/it.po
+++ b/po/it.po
@@ -3148,7 +3148,7 @@ msgstr ""
 "  linea), \\r (a capo) o \\\\ (un backslash). Le informazioni del\n"
 "  pacchetto possono essere incluse inserendo delle variabili che\n"
 "  referenziano i vari campi usando la sintassi ${var[;dim]}. I campi\n"
-"  saranno allineati a destra a meno ché non sia specificata una\n"
+"  saranno allineati a destra a meno che non sia specificata una\n"
 "  dimensione negativa, nel qual caso verranno allineati a sinistra.\n"
 
 #: src/query.c:514
