--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-17  Davide Viti  <zinosat@tiscali.it>
+
+	* it.po: Fix typo.
+
 2006-09-16  Frédéric Bothamy  <frederic.bothamy@free.fr>
 
 	* fr.po: Updated to 920t.
