--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Slovak (Peter Mann). Closes: #387282
   * Spanish (Javier Fernandez-Sanguino). Closes: #386759
   * Italian (Typo) (Davide Viti). Closes: #387821
+  * Dzongkha (Tenzin Dendup). Closes: #388192
 
   [ Updated dselect Translations ]
   * Catalan (Robert Millan).
