--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-19  Tenzin Dendup  <tdendup@dit.gov.bt>
+
+	* dz.po: Updated to 920t.
+
 2006-09-17  Davide Viti  <zinosat@tiscali.it>
 
 	* it.po: Fix typo.
