Change the Dzongkha translation maintainer to norbu <nor_den@hotmail.com>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2006-09-19  Tenzin Dendup  <tdendup@dit.gov.bt>
 
+	* LINGUAS: Change the Dzongkha translation maintainer to
+	norbu <nor_den@hotmail.com>
+
+2006-09-19  Tenzin Dendup  <tdendup@dit.gov.bt>
+
 	* dz.po: Updated to 920t.
 
 2006-09-17  Davide Viti  <zinosat@tiscali.it>
