--- a/debian/changelog
+++ b/debian/changelog
@@ -66,7 +66,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
       install-info.8, dpkg-deb.1, and dpkg-split.1 translations.
       Closes: #381488
   * Japanese (KISE Hiroshi).
-    Closes: 381141, #381865, #384768, #385675, #386965
+    Closes: 381141, #381865, #384768, #385675, #386965, #388837
     - 822-date.1
     - deb.5
     - deb-old.5
