--- a/man/po4a/dpkg-query.1/po/ja.po
+++ b/man/po4a/dpkg-query.1/po/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2006-08-18 23:17+0900\n"
+"PO-Revision-Date: 2006-09-19 21:15+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
-"Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
+"Language-Team: Debian Japanese List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -225,7 +225,7 @@ msgstr ""
 "指定したファイルがどのパッケージからインストールされたかを探す。パターンに"
 "は、標準的なシェルのすべてのワイルド文字を使用することができる。このコマンド"
 "では、メンテナスクリプトで作成された追加ファイルや、 alternatives は探すこと"
-"ができない"
+"ができない。"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-query.1:82
@@ -295,7 +295,7 @@ msgid ""
 "This option is used to specify the format of the output B<--show> will "
 "produce. The format is a string that will be output for each package listed."
 msgstr ""
-"このオプションは、B<--show> が生成する出力の書式の指定するものである。書式は文字列で、パッケージごとに出力される。"
+"このオプションは、B<--show> が生成する出力の書式を指定するものである。書式は文字列で、パッケージごとに出力される。"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-query.1:105
