--- a/man/po4a/start-stop-daemon.8/po/ja.po
+++ b/man/po4a/start-stop-daemon.8/po/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-23 16:11+0200\n"
-"PO-Revision-Date: 2006-09-06 00:55+0900\n"
+"PO-Revision-Date: 2006-09-19 20:33+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
-"Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
+"Language-Team: Debian Japanese List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
