--- a/man/po4a/update-alternatives.8/po/ja.po
+++ b/man/po4a/update-alternatives.8/po/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-23  0:04+0200\n"
-"PO-Revision-Date: 2006-09-02 15:42+0900\n"
+"PO-Revision-Date: 2006-09-19 20:53+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
-"Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
+"Language-Team: Debian Japanese List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -268,7 +268,7 @@ msgid ""
 msgstr ""
 "I<--config> オプションを用いると、 B<update-alternatives> は与えられた "
 "master リンクのリンクグループに対応する選択肢をすべてリストする。"
-"現在選択されているものには '*' が、もっとも priority の高いものには '+' の印"
+"現在選択されているものには '*' が、もっとも priority の高いものには '+' マーク"
 "がつく。そしてそのリンクグループの選択を問い合わせるプロンプトが表示される。こ"
 "こで変更を行うと、その一般名は I<auto> モードではなくなる。 automatic 状態に"
 "戻すには、 I<--auto> オプションを用いる必要がある。"
