Updated translation.  And taking over the French translation of the dpkg manpages (with the previous maintainer agreement).

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2006-09-23  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* po4a/start-stop-daemon.8/po/fr.po: Updated translation.
+	And taking over the French translation of the dpkg manpages (with
+	the previous maintainer agreement).
+
 2006-09-23  KISE Hiroshi  <kise@fuyuneko.jp>
 
 	* po4a/dpkg-query.1/po/ja.po: Fix typos.
