--- a/man/po4a/start-stop-daemon.8/po/fr.po
+++ b/man/po4a/start-stop-daemon.8/po/fr.po
@@ -1,13 +1,13 @@
-# SOME DESCRIPTIVE TITLE
+# French translation of start-stop-daemon(8).
 # Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Philippe Batailler <philippe.batailler@free.fr>, 2005, 2006.
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-23 16:11+0200\n"
-"PO-Revision-Date: 2006-08-17 11:10+0200\n"
-"Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
+"PO-Revision-Date: 2006-09-23 21:36+0200\n"
+"Last-Translator: Nicolas François <nicolas.francois@centraliens.net>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -108,8 +108,9 @@ msgstr ""
 "processus particulier. Quand existe un tel processus, B<start-stop-daemon> "
 "ne fait rien et se termine avec un code d'erreur égal à 1 (0 si B<--oknodo> "
 "est précisé). Quand un tel processus n'existe pas, un exemplaire de "
-"l'exécutable est lancé avec B<--exec,> (ou, si c'est précisé, avec B<--"
-"startas).> Tout argument donné après B<--> sur la ligne de commande est "
+"l'exécutable est lancé, en utilisant le paramètre de B<--exec> ou, celui "
+"de B<--startas> si cette option est précisée. "
+"Tout argument donné après B<--> sur la ligne de commande est "
 "passé tel quel au programme qui doit être lancé."
 
 # type: Plain text
